bacon: Proximity wake overlay
Signed-off-by: kishpatel1998 <kishanppatel19@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -388,6 +388,7 @@
 
     <!-- Proximity check -->
     <bool name="config_proximityCheckOnWake">true</bool>
+    <integer name="config_proximityCheckTimeout">100</integer>
     <bool name="config_proximityCheckOnWakeEnabledByDefault">true</bool>
 
      <!-- Specifies the path that is used by AdaptiveIconDrawable class to crop launcher icons. -->
